# aws_ops_monitor

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: README.md  aws-ops-monitor-collector.service  aws-ops-monitor-web.service  backup.sh  install.sh  remote-deploy.sh  rollback.sh  transaction.sh  tree-hash.py  verify.sh
docs/: architecture.md  metric-contract.md  security.md
scripts/: check.sh
src/aws_ops_monitor/: __init__.py  __main__.py  collector.py  config.py  models.py  store.py  web.py
src/aws_ops_monitor/collectors/: __init__.py  aws_lightsail.py  host.py  network.py  probes.py  xray.py
src/aws_ops_monitor/static/: app.js  index.html  styles.css
tests/: test_aws_lightsail.py  test_collector.py  test_config.py  test_counter_reset.py  test_deploy.py  test_host.py  test_network.py  test_probes.py  test_static_app.py  test_store.py  test_tree_hash.py  test_web.py  test_xray.py
